# onnx-wrapper

./: CMakeLists-TEMPLATE.txt  CMakeLists.txt  LICENSE  README.md  test  test.cpp
lib/: libonnxruntime.dylib
